<resources>
    <string name="app_name">SimpleNews</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_news">新闻</string>
    <string name="navigation_images">图片</string>
    <string name="navigation_weather">天气</string>
    <string name="navigation_about">关于</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="name">Lauren_Liuling</string>
    <string name="app_description">本APP用来演示Material Design以及MVP设计模式在项目中的使用</string>
    <string name="app_github_url">APP地址：https://github.com/liuling07/SimpleNews</string>
    <string name="author">作者：Lauren</string>
    <string name="email">邮箱：lauren.liuling@gmail.com</string>
    <string name="blog">博客：http://www.liuling123.com</string>

    <string name="top">头条</string>
    <string name="nba">NBA</string>
    <string name="cars">汽车</string>
    <string name="jokes">笑话</string>

    <string name="jingxuan">精选</string>
    <string name="qutu">趣图</string>
    <string name="meitu">美图</string>
    <string name="story">故事</string>

    <string name="load_fail">加载数据失败!</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="image_hit">一次只加载20条，查看更多内容请刷新哦。</string>
</resources>
